modification du fichier index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<title>Document</title>
 </head>
 <body>
@@ -114,8 +114,8 @@
 		</div>
 		
 	</div>
-</body>
 	<div id="footer">
 
 	</div>
+</body>
 </html>
